--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==4.0.1
 astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
+autopep8==1.4.3
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -10,6 +11,7 @@ coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
 Flask-RESTful==0.3.7
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
@@ -20,6 +22,7 @@ mccabe==0.6.1
 more-itertools==5.0.0
 pluggy==0.8.0
 py==1.7.0
+pycodestyle==2.4.0
 pylint==2.2.2
 pytest==4.1.0
 python-dotenv==0.10.1
