--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install coveralls
 script:
   - pytest
-  - coverage run --source=app.api.v1.views -m pytest && coverage report
+  - coverage run --source=app -m pytest && coverage report
 after_success:
   - coveralls
