--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
+flask-expects-json==1.3.1
 Flask-RESTful==0.3.7
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
+jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
