--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.pytest_cache/
 
 # C extensions
 *.so
@@ -83,7 +84,7 @@ celerybeat-schedule
 .venv
 env/
 venv/
-ENV/
+ENV/git
 env.bak/
 venv.bak/
 
@@ -101,3 +102,4 @@ venv.bak/
 .mypy_cache/
 
 .vscode/
+.idea/
